--- a/Modul_1/1.1-Installation.md
+++ b/Modul_1/1.1-Installation.md
@@ -1,4 +1,4 @@
-# Installation af Python og Visual Studio Code
+# Modul 1.1: Installation af Python og Visual Studio Code
 
 Følg nedenstående trin for at installere de nødvendige værktøjer til at arbejde med Python-kode i Visual Studio Code (VS Code).
 
