--- a/Modul_2/2.2-Loops.md
+++ b/Modul_2/2.2-Loops.md
@@ -1,1 +1,177 @@
+# 🔄 **Modul 3: Loops i Python**  
 
+I dette modul lærer du at bruge **loops (gentagelser)** i Python til at automatisere gentagne opgaver. Loops er en essentiel del af programmering, da de gør det muligt at udføre den samme handling flere gange uden at skrive gentagne kodelinjer.  
+
+> **Mål for dette modul:**  
+> ✅ Forstå `for`- og `while`-loops  
+> ✅ Lære at iterere gennem lister, strenge og talrækker  
+> ✅ Bruge `break` og `continue` til at kontrollere loops  
+> ✅ Skabe effektive og optimerede loops  
+
+---
+
+## 🔁 **1. For-løkker: Gentagelse af kodeblokke**  
+
+En `for`-løkke bruges til at **iterere over en sekvens** (liste, tuple, streng eller range).
+
+```python
+for bogstav in "Python":
+    print(bogstav)
+```
+📌 Udskriver:
+```
+P
+y
+t
+h
+o
+n
+```
+
+### 1.1 Brug af `range()` i en `for`-løkke  
+
+Hvis du vil gentage en handling **et bestemt antal gange**, kan du bruge `range()`:
+
+```python
+for i in range(5):
+    print("Loop nummer:", i)
+```
+📌 Udskriver:
+```
+Loop nummer: 0
+Loop nummer: 1
+Loop nummer: 2
+Loop nummer: 3
+Loop nummer: 4
+```
+
+#### `range(start, stop, step)`  
+
+Du kan også bruge `range()` med **start, stop og step**:
+
+```python
+for tal in range(2, 10, 2):  # Starter fra 2, går op til (men ikke inkl.) 10, springer 2 over
+    print(tal)
+```
+📌 Udskriver: `2, 4, 6, 8`  
+
+---
+
+## 🔁 **2. While-løkker: Gentag kode så længe en betingelse er sand**  
+
+En `while`-løkke fortsætter, **så længe en betingelse er sand**.
+
+```python
+x = 0
+
+while x < 5:
+    print("x er:", x)
+    x += 1  # Øger x med 1
+```
+📌 Udskriver:
+```
+x er: 0
+x er: 1
+x er: 2
+x er: 3
+x er: 4
+```
+
+👉 **Brug `while` når du ikke ved præcis hvor mange gentagelser, der skal til!**  
+
+---
+
+## 🚨 **3. Kontrol af loops: `break` og `continue`**  
+
+### 3.1 `break`: Stop løkken tidligt  
+`break` bruges til **at afbryde et loop**.
+
+```python
+for tal in range(10):
+    if tal == 5:
+        print("Stopper ved:", tal)
+        break
+    print(tal)
+```
+📌 Udskriver:
+```
+0
+1
+2
+3
+4
+Stopper ved: 5
+```
+
+### 3.2 `continue`: Spring en iteration over  
+`continue` bruges til at **springe resten af en iteration over** og fortsætte til næste.
+
+```python
+for tal in range(5):
+    if tal == 2:
+        continue  # Springer tal 2 over
+    print(tal)
+```
+📌 Udskriver:
+```
+0
+1
+3
+4
+```
+
+---
+
+## 🏗 **4. Kombinere loops og lister**  
+
+Du kan bruge `for`-loops til at **iterere over en liste**:
+
+```python
+navne = ["Anna", "Brian", "Cecilie"]
+
+for navn in navne:
+    print("Hej", navn + "!")
+```
+📌 Udskriver:
+```
+Hej Anna!
+Hej Brian!
+Hej Cecilie!
+```
+
+---
+
+## 🎯 **5. Øvelser**  
+
+### 1️⃣ **Brug af `for`-løkke**
+- Lav en `for`-løkke, der udskriver tallene fra 1 til 10.
+- Udvid koden til at udskrive `"Lige tal"` eller `"Ulige tal"` ud for hvert tal.
+
+### 2️⃣ **Brug af `while`-løkke**
+- Lav en `while`-løkke, der tæller ned fra 5 til 0.
+
+### 3️⃣ **Brug af `break` og `continue`**
+- Lav en `for`-løkke, der printer tal fra 1 til 10.
+- Brug `break`, så løkken stopper, når tallet er 7.
+- Lav en ny løkke, hvor `continue` bruges til at springe over tallet 4.
+
+### 4️⃣ **Lister og loops**
+- Opret en liste med dine yndlingsmadvarer.
+- Brug en `for`-løkke til at udskrive alle madvarerne.
+
+### 🔥 **Bonusudfordring**
+- Lav et simpelt gætte-spil, hvor programmet vælger et tilfældigt tal mellem 1-10, og brugeren skal gætte det.
+- Brug en `while`-løkke til at give brugeren flere forsøg.
+
+---
+
+## 🚀 **6. Opsummering**
+✔️ `for`-loops bruges til iteration over en sekvens  
+✔️ `while`-loops gentager kode, så længe en betingelse er sand  
+✔️ `break` stopper en løkke, `continue` springer en iteration over  
+✔️ Løkker kan bruges til at arbejde med lister og ranges  
+
+**📌 Videre til næste modul: Funktioner**  
+Her lærer du om **lister, dictionaries og filhåndtering**! 📁  
+
+**God fornøjelse med loops i Python!** 🔄🐍  
