--- a/Modul_2/2.1-Betingelser.md
+++ b/Modul_2/2.1-Betingelser.md
@@ -162,7 +162,7 @@ Lav et **loginsystem**, der beder brugeren om et brugernavn og en adgangskode.
 ✔️ **Sammenligningsoperatorer** (`==`, `<`, `>`, `!=`, osv.)  
 ✔️ **Logiske operatorer** (`and`, `or`, `not`)  
 
-**📌 Videre til næste modul: [Loops](#)**  
+**📌 Videre til næste modul: [Loops](2.2-Loops.md)**  
 Her lærer du, hvordan du gentager kode med **for- og while-løkker**! 🌀  
 
 **God fornøjelse med betingelser i Python!** 🎉🐍
