--- a/Modul_2/2.2-Loops.md
+++ b/Modul_2/2.2-Loops.md
@@ -171,7 +171,7 @@ Hej Cecilie!
 ✔️ `break` stopper en løkke, `continue` springer en iteration over  
 ✔️ Løkker kan bruges til at arbejde med lister og ranges  
 
-**📌 Videre til næste modul: Funktioner**  
+**📌 Videre til næste modul: [Funktioner](2.3-Funktioner.md)**  
 Her lærer du om **lister, dictionaries og filhåndtering**! 📁  
 
 **God fornøjelse med loops i Python!** 🔄🐍  
