--- a/Modul_2/2.2-Loops.md
+++ b/Modul_2/2.2-Loops.md
@@ -172,6 +172,6 @@ Hej Cecilie!
 ✔️ Løkker kan bruges til at arbejde med lister og ranges  
 
 **📌 Videre til næste modul: [Funktioner](2.3-Funktioner.md)**  
-Her lærer du om **lister, dictionaries og filhåndtering**! 📁  
+Her lærer du om **Hvad er en funktion og hvordan bruges de**! 📁  
 
 **God fornøjelse med loops i Python!** 🔄🐍  
