--- a/Modul_2/2.3-Funktioner.md
+++ b/Modul_2/2.3-Funktioner.md
@@ -1,1 +1,152 @@
+# 🛠 **Modul 4: Funktioner i Python**  
 
+I dette modul lærer du at bruge **funktioner** i Python. Funktioner gør det muligt at organisere kode bedre, genbruge logik og skrive mere overskuelige programmer.
+
+> **Mål for dette modul:**  
+> ✅ Forstå hvordan funktioner fungerer i Python  
+> ✅ Lære at definere og kalde funktioner  
+> ✅ Bruge parametre og returnere værdier  
+> ✅ Forstå `*args` og `**kwargs` for fleksible funktioner  
+
+---
+
+## 🔍 **1. Hvad er en funktion?**  
+
+En funktion er en **blok af kode**, der kun køres, når den bliver kaldt. Funktioner bruges til at organisere kode bedre og **undgå gentagelser**.
+
+**Eksempel:**  
+```python
+def hils():
+    print("Hej! Velkommen til Python.")
+    
+hils()  # Kalder funktionen
+```
+📌 Udskriver:
+```
+Hej! Velkommen til Python.
+```
+
+**OBS:** En funktion **kører ikke af sig selv**, men skal **kaldes** for at blive udført.
+
+---
+
+## 🏗 **2. Funktioner med parametre**  
+
+Du kan sende **data (argumenter)** til en funktion.
+
+```python
+def hils(navn):
+    print(f"Hej, {navn}!")
+
+hils("Mia")  # Hej, Mia!
+hils("Anders")  # Hej, Anders!
+```
+
+Du kan have flere parametre:
+
+```python
+def læg_sammen(a, b):
+    return a + b
+
+sum = læg_sammen(5, 3)
+print(sum)  # 8
+```
+
+> **`return` sender en værdi tilbage**, så vi kan gemme resultatet i en variabel.
+
+---
+
+## 🔢 **3. Standardværdier i parametre**  
+
+Hvis en parameter ikke gives, kan vi definere en **standardværdi**.
+
+```python
+def hils(navn="ven"):
+    print(f"Hej, {navn}!")
+
+hils()       # Hej, ven!
+hils("Kasper")  # Hej, Kasper!
+```
+
+---
+
+## 🏆 **4. Funktioner med fleksible argumenter (`*args` og `**kwargs`)**  
+
+### `*args`: Flere positionelle argumenter  
+
+Brug `*args`, hvis du vil tillade et ukendt antal argumenter.
+
+```python
+def læg_sammen(*tal):
+    return sum(tal)
+
+print(læg_sammen(1, 2, 3, 4, 5))  # 15
+```
+
+### `**kwargs`: Flere navngivne argumenter  
+
+Brug `**kwargs` til **nøgle-værdi par** (dictionary-lignende).
+
+```python
+def profil(**info):
+    for nøgle, værdi i info.items():
+        print(f"{nøgle}: {værdi}")
+
+profil(navn="Sara", alder=25, by="København")
+```
+📌 Udskriver:
+```
+navn: Sara
+alder: 25
+by: København
+```
+
+---
+
+## 🔄 **5. Rekursive funktioner**  
+
+En funktion kan **kalde sig selv**, hvilket er nyttigt til gentagne beregninger.
+
+```python
+def faktorial(n):
+    if n == 1:
+        return 1
+    return n * faktorial(n-1)
+
+print(faktorial(5))  # 5 * 4 * 3 * 2 * 1 = 120
+```
+
+---
+
+## 🎯 **6. Øvelser**  
+
+### 1️⃣ **Grundlæggende funktioner**
+- Skriv en funktion `kvadrat(x)`, der returnerer `x * x`.
+- Test den med `kvadrat(5)` (Forventet: `25`).
+
+### 2️⃣ **Funktion med flere parametre**
+- Lav en funktion `find_maks(a, b, c)`, der returnerer det største af tre tal.
+
+### 3️⃣ **Standardværdier**
+- Lav en funktion `introducer(navn, by="Aarhus")`, hvor `by` har en standardværdi.
+- Test den med forskellige navne og byer.
+
+### 4️⃣ **Brug af `*args`**
+- Lav en funktion, der tager **et vilkårligt antal tal** og returnerer gennemsnittet.
+
+### 🔥 **Bonusudfordring**
+- Lav en funktion, der tjekker om et ord er et **palindrom** (samme forfra og bagfra).
+- Eksempel: `"racecar"` → `True`, `"hello"` → `False`.
+
+---
+
+## 🚀 **7. Opsummering**
+✔️ Funktioner gør din kode **mere organiseret** og **genbrugelig**.  
+✔️ Brug `return` til at sende værdier tilbage.  
+✔️ `*args` og `**kwargs` giver fleksibilitet.  
+✔️ Rekursive funktioner kan løse gentagne problemer.  
+
+**📌 Videre til næste modul: [Klasser](2.4-Klasser)**  
+Her lærer du om **lister, dictionaries og filhåndtering**! 📁  
+
+**God fornøjelse med funktioner i Python!** 🛠🐍  
