--- a/Modul_2/2.4-Klasser.md
+++ b/Modul_2/2.4-Klasser.md
@@ -1,1 +1,178 @@
+# 🎭 **Modul 5: Klasser og Objektorienteret Programmering (OOP) i Python**  
 
+I dette modul lærer du om **objektorienteret programmering (OOP)** i Python ved hjælp af **klasser og objekter**.  
+
+> **Mål for dette modul:**  
+> ✅ Forstå begreberne **klasse**, **objekt**, **attribut** og **metode**  
+> ✅ Lære at oprette og bruge klasser  
+> ✅ Bruge **init-metoden** og **self**  
+> ✅ Forstå begreberne **arv** og **polymorfi**  
+
+---
+
+## 📌 **1. Hvad er en klasse?**  
+
+En **klasse** er en skabelon for at skabe **objekter**. Et **objekt** er en specifik instans af en klasse.  
+
+Eksempel på en simpel klasse:  
+
+```python
+class Bil:
+    def __init__(self, mærke, model, årgang):
+        self.mærke = mærke
+        self.model = model
+        self.årgang = årgang
+
+    def beskrivelse(self):
+        return f"{self.årgang} {self.mærke} {self.model}"
+
+# Opret et objekt (en bil)
+min_bil = Bil("Toyota", "Corolla", 2020)
+print(min_bil.beskrivelse())  # Udskriver: 2020 Toyota Corolla
+```
+
+🔹 **Klassen `Bil`** definerer en bil med mærke, model og årgang.  
+🔹 **Funktionen `__init__`** er en **konstruktør**, der kører, når et nyt objekt oprettes.  
+🔹 **`self`** refererer til objektet selv og giver adgang til dets data.  
+
+---
+
+## 🛠 **2. Attributter og metoder**  
+
+### 2.1 Instansvariabler  
+
+Variabler, der tilhører en **specifik instans** af en klasse, kaldes **instansvariabler**:
+
+```python
+class Person:
+    def __init__(self, navn, alder):
+        self.navn = navn
+        self.alder = alder
+
+    def sig_hej(self):
+        return f"Hej, mit navn er {self.navn} og jeg er {self.alder} år gammel."
+
+# Opret objekter
+p1 = Person("Lise", 30)
+p2 = Person("Anders", 25)
+
+print(p1.sig_hej())  # Hej, mit navn er Lise og jeg er 30 år gammel.
+print(p2.sig_hej())  # Hej, mit navn er Anders og jeg er 25 år gammel.
+```
+
+### 2.2 Klasseattributter  
+
+En **klasseattribut** deles af alle instanser af klassen:
+
+```python
+class Hund:
+    art = "pattedyr"  # Klasseattribut
+
+    def __init__(self, navn):
+        self.navn = navn
+
+# Opret objekter
+h1 = Hund("Bella")
+h2 = Hund("Max")
+
+print(h1.art)  # pattedyr
+print(h2.art)  # pattedyr
+```
+
+> **Klasseattributten `art`** er den samme for alle objekter, mens `navn` er forskellig.
+
+---
+
+## 🔄 **3. Arv (inheritance)**  
+
+Arv tillader, at en ny klasse **nedarver** egenskaber fra en eksisterende klasse.
+
+```python
+class Dyr:
+    def __init__(self, navn):
+        self.navn = navn
+
+    def lyd(self):
+        return "Dette dyr laver en lyd"
+
+# Hund nedarver fra Dyr
+class Hund(Dyr):
+    def lyd(self):
+        return "Vuf!"
+
+# Kat nedarver fra Dyr
+class Kat(Dyr):
+    def lyd(self):
+        return "Miau!"
+
+# Opret objekter
+h = Hund("Bella")
+k = Kat("Misser")
+
+print(h.navn, "siger", h.lyd())  # Bella siger Vuf!
+print(k.navn, "siger", k.lyd())  # Misser siger Miau!
+```
+
+🔹 `Hund` og `Kat` **arver** fra `Dyr`, men overskriver metoden `lyd()`.  
+🔹 Dette er et eksempel på **polymorfi** – metoder kan opføre sig forskelligt i underklasser.  
+
+---
+
+## 🔄 **4. Polymorfi: Ens metode, forskellig funktionalitet**  
+
+Polymorfi betyder, at en metode kan opføre sig forskelligt afhængigt af klassen.  
+
+```python
+class Fugl:
+    def lyd(self):
+        return "Fuglen synger"
+
+class Papegøje(Fugl):
+    def lyd(self):
+        return "Papegøjen siger: Hej!"
+
+# Funktion der kalder lyd() på forskellige objekter
+def lav_lyd(dyr):
+    print(dyr.lyd())
+
+fugl = Fugl()
+papegøje = Papegøje()
+
+lav_lyd(fugl)      # Fuglen synger
+lav_lyd(papegøje)  # Papegøjen siger: Hej!
+```
+
+🔹 `lav_lyd()` fungerer uanset hvilken klasse der sendes ind – takket være polymorfi!  
+
+---
+
+## 🎯 **5. Øvelser**  
+
+### 1️⃣ **Grundlæggende klasser**
+- Lav en klasse `Rektangel`, der har attributterne `bredde` og `højde`.
+- Tilføj en metode `areal()`, der returnerer arealet (`bredde * højde`).
+- Opret et objekt og udskriv arealet.
+
+### 2️⃣ **Arv**
+- Lav en klasse `Fartøj` med en metode `bevæg()`.
+- Opret to underklasser `Bil` og `Fly`, hvor `bevæg()` returnerer `"Kører"` for biler og `"Flyver"` for fly.
+
+### 3️⃣ **Polymorfi**
+- Lav en funktion `udskriv_lyd()`, der tager et `Dyr`-objekt og kalder `lyd()`.
+
+### 🔥 **Bonusudfordring**
+- Lav en `Bankkonto`-klasse med `saldo` og en metode `indbetal()`.
+- Lav en underklasse `Opsparingskonto`, der har en metode `tilføj_rente()`, som øger saldoen.
+
+---
+
+## 🚀 **6. Opsummering**
+✔️ Klasser bruges til at organisere kode i **objekter**.  
+✔️ `__init__()` bruges til at initialisere objekter.  
+✔️ **Arv** gør det muligt at genbruge kode i underklasser.  
+✔️ **Polymorfi** giver fleksibilitet med ens metode-navne.  
+
+**📌 Videre til næste modul: [Modul 4 - Datahåndtering](#Modul_4)**  
+Her lærer du om **avancerede datastrukturer og filhåndtering**! 📁  
+
+**God fornøjelse med OOP i Python!** 🎭🐍  
