--- a/Modul_2/2.4-Klasser.md
+++ b/Modul_2/2.4-Klasser.md
@@ -172,7 +172,7 @@ lav_lyd(papegøje)  # Papegøjen siger: Hej!
 ✔️ **Arv** gør det muligt at genbruge kode i underklasser.  
 ✔️ **Polymorfi** giver fleksibilitet med ens metode-navne.  
 
-**📌 Videre til næste modul: [Modul 3 - Datahåndtering](Modul_3/)**  
+**📌 Videre til næste modul: [Modul 3 - Datahåndtering](Modul_3./)**  
 Her lærer du om **avancerede datastrukturer og filhåndtering**! 📁  
 
 **God fornøjelse med OOP i Python!** 🎭🐍  
