--- a/Modul_1/1.3-Datatyper.md
+++ b/Modul_1/1.3-Datatyper.md
@@ -188,3 +188,5 @@ print(int(t) + 1)  # 101
 - Konvertering hjælper dig med at gå fra én type til en anden.
 
 Du bør nu have et solidt kendskab til de mest gængse datatyper i Python og hvordan du bruger dem. Dette er afgørende for at kunne skrive effektive og rene Python-programmer.
+
+**📌 Videre til næste modul: [Modul 2](/Modul_2)**  
