--- a/Modul_3/3.1-Lister.md
+++ b/Modul_3/3.1-Lister.md
@@ -1,1 +1,171 @@
+# 📂 **Modul 3: Datahåndtering i Python**  
 
+I dette modul lærer du, hvordan du **håndterer og gemmer data** i dine Python-programmer ved hjælp af **lister, tuples, dictionaries og sets**.  
+
+> **Mål for dette modul:**  
+> ✅ Forstå forskellen mellem **list, tuple, dict og set**  
+> ✅ Lære at gemme og manipulere data i disse datastrukturer  
+> ✅ Vælge den rigtige datastruktur til forskellige opgaver  
+
+---
+
+## 📌 **1. Lister (`list`)**  
+
+En **liste** er en **ordnet, ændringsbar (mutable)** samling af elementer. Den kan indeholde blandede datatyper.
+
+```python
+# Oprettelse af en liste
+frugter = ["æble", "banan", "chili"]
+
+# Tilføj et element
+frugter.append("dadel")
+
+# Udskriv hele listen
+print(frugter)  # ['æble', 'banan', 'chili', 'dadel']
+```
+
+### **1.1 Adgang til elementer i en liste**
+```python
+print(frugter[0])   # Første element: æble
+print(frugter[-1])  # Sidste element: dadel
+```
+
+### **1.2 Ændring af elementer**
+```python
+frugter[1] = "pære"
+print(frugter)  # ['æble', 'pære', 'chili', 'dadel']
+```
+
+### **1.3 Slicing af en liste**
+```python
+print(frugter[1:3])  # ['pære', 'chili']
+```
+
+### **1.4 Fjerne elementer**
+```python
+frugter.remove("chili")  # Fjerner 'chili'
+print(frugter)  # ['æble', 'pære', 'dadel']
+```
+
+---
+
+## 📌 **2. Tuples (`tuple`)**  
+
+En **tuple** minder om en liste, men den er **ikke-ændringsbar (immutable)**.
+
+```python
+point = (10, 20, 30)
+
+print(point[0])   # 10
+print(point[-1])  # 30
+```
+
+### **2.1 Hvorfor bruge tuples?**
+- **Sikrer, at data ikke kan ændres** (godt til konstanter).
+- **Hurtigere** end lister.
+
+```python
+# Fejl – dette er ikke tilladt!
+# point[0] = 15  # TypeError
+```
+
+> Brug tuples, når du vil beskytte data mod ændringer!
+
+---
+
+## 📌 **3. Dictionaries (`dict`)**  
+
+En **dictionary (dict)** gemmer **nøgle-værdi-par**. Dette gør det nemt at organisere relaterede data.
+
+```python
+person = {
+    "navn": "Lise",
+    "alder": 25,
+    "by": "Aarhus"
+}
+
+print(person["navn"])  # Lise
+print(person["alder"]) # 25
+```
+
+### **3.1 Tilføj eller ændr værdier**
+```python
+person["job"] = "Ingeniør"  # Tilføjer en ny nøgle-værdi
+person["alder"] = 26        # Ændrer værdien af 'alder'
+print(person)
+```
+
+### **3.2 Løkker gennem en dictionary**
+```python
+for nøgle, værdi in person.items():
+    print(nøgle, ":", værdi)
+```
+
+> Dictionaries er ideelle til at gemme **strukturerede data**, såsom databaser eller API-data.
+
+---
+
+## 📌 **4. Sets (`set`)**  
+
+Et **set** indeholder **unikke** værdier og **ingen bestemt rækkefølge**.
+
+```python
+unikke_tal = {1, 2, 3, 2, 4, 4}
+print(unikke_tal)  # {1, 2, 3, 4}  (dubletter fjernes)
+```
+
+### **4.1 Tilføj og fjern elementer**
+```python
+unikke_tal.add(5)  # Tilføjer et nyt tal
+unikke_tal.remove(2)  # Fjerner tallet 2
+print(unikke_tal)
+```
+
+### **4.2 Set-operationer**
+```python
+mængde1 = {1, 2, 3}
+mængde2 = {3, 4, 5}
+
+print(mængde1.union(mængde2))    # {1, 2, 3, 4, 5}
+print(mængde1.intersection(mængde2))  # {3}
+```
+
+> Sets bruges, når du har **unikke data**, såsom tags, labels eller medlemslister.
+
+---
+
+## 🎯 **5. Øvelser**  
+
+### 1️⃣ **Lister**
+- Opret en liste med tre ting, du godt kan lide.
+- Tilføj en ny ting til listen.
+- Udskriv listen.
+
+### 2️⃣ **Tuples**
+- Opret en tuple med tre tal.
+- Prøv at ændre et element (hvad sker der?).
+
+### 3️⃣ **Dictionaries**
+- Opret en dictionary med information om dig selv (`"navn"`, `"alder"`, `"by"`).
+- Tilføj en ny nøgle, `"hobby"`, med en værdi.
+
+### 4️⃣ **Sets**
+- Lav et set med tal fra 1 til 5.
+- Lav et andet set med tal fra 3 til 7.
+- Find fælles værdier mellem de to sets.
+
+### 🔥 **Bonusudfordring**
+- Lav en **telefonbog** med et dictionary, hvor navnene er nøgler, og telefonnumrene er værdier.
+
+---
+
+## 🚀 **6. Opsummering**
+✔️ **Lister** er **ændringsbare**, bevarer rækkefølge.  
+✔️ **Tuples** er **ikke-ændringsbare**, hurtigere end lister.  
+✔️ **Dictionaries** er **nøgle-værdi-par**, ideelle til struktureret data.  
+✔️ **Sets** indeholder **unikke** elementer og bruges til mængdeoperationer.  
+
+**📌 Videre til næste modul: [Dictionaries](3.2-Dictionaries.md)**  
+Her lærer du, hvordan du **læser og skriver filer i Python**! 📁  
+
+**God fornøjelse med datahåndtering i Python!** 📂🐍  
