--- a/Modul_3/3.1-Lister.md
+++ b/Modul_3/3.1-Lister.md
@@ -1,171 +1,202 @@
-# 📂 **Modul 3: Datahåndtering i Python**  
+# 📋 **Modul: Lister i Python**  
 
-I dette modul lærer du, hvordan du **håndterer og gemmer data** i dine Python-programmer ved hjælp af **lister, tuples, dictionaries og sets**.  
+Lister er en af de mest brugte datastrukturer i Python. De er **ændringsbare (mutable)**, kan indeholde **forskellige datatyper**, og er meget fleksible.
 
 > **Mål for dette modul:**  
-> ✅ Forstå forskellen mellem **list, tuple, dict og set**  
-> ✅ Lære at gemme og manipulere data i disse datastrukturer  
-> ✅ Vælge den rigtige datastruktur til forskellige opgaver  
+> ✅ Forstå, hvordan lister fungerer i Python  
+> ✅ Lære at tilføje, fjerne og ændre elementer  
+> ✅ Bruge liste-metoder til at manipulere data  
+> ✅ Iterere gennem lister med loops  
 
 ---
 
-## 📌 **1. Lister (`list`)**  
+## 📌 **1. Hvad er en liste?**  
 
-En **liste** er en **ordnet, ændringsbar (mutable)** samling af elementer. Den kan indeholde blandede datatyper.
+En **liste** er en **ordnet samling af elementer**, som kan ændres.
 
 ```python
 # Oprettelse af en liste
 frugter = ["æble", "banan", "chili"]
-
-# Tilføj et element
-frugter.append("dadel")
-
-# Udskriv hele listen
-print(frugter)  # ['æble', 'banan', 'chili', 'dadel']
+print(frugter)  # ['æble', 'banan', 'chili']
 ```
 
-### **1.1 Adgang til elementer i en liste**
+En liste kan indeholde forskellige datatyper:
+
 ```python
-print(frugter[0])   # Første element: æble
-print(frugter[-1])  # Sidste element: dadel
+blandet = [42, "Hej", 3.14, True]
+print(blandet)
 ```
 
-### **1.2 Ændring af elementer**
+---
+
+## 🔢 **2. Adgang til elementer**  
+
+Lister bruger **nulbaseret indeks** (`0` er første element).
+
+```python
+print(frugter[0])  # Første element: æble
+print(frugter[-1]) # Sidste element: chili
+```
+
+---
+
+## 🛠 **3. Ændring af elementer**  
+
 ```python
 frugter[1] = "pære"
+print(frugter)  # ['æble', 'pære', 'chili']
+```
+
+> Lister kan ændres, hvilket gør dem **meget fleksible**!
+
+---
+
+## ➕ **4. Tilføj elementer**  
+
+### **4.1 Tilføj ét element med `.append()`**  
+
+```python
+frugter.append("dadel")
 print(frugter)  # ['æble', 'pære', 'chili', 'dadel']
 ```
 
-### **1.3 Slicing af en liste**
+### **4.2 Indsæt på en bestemt position med `.insert()`**  
+
 ```python
-print(frugter[1:3])  # ['pære', 'chili']
+frugter.insert(1, "fersken")
+print(frugter)  # ['æble', 'fersken', 'pære', 'chili', 'dadel']
 ```
 
-### **1.4 Fjerne elementer**
+### **4.3 Kombiner lister med `+` eller `.extend()`**  
+
 ```python
-frugter.remove("chili")  # Fjerner 'chili'
-print(frugter)  # ['æble', 'pære', 'dadel']
+flere_frugter = ["kiwi", "mango"]
+frugter.extend(flere_frugter)
+print(frugter)
 ```
 
 ---
 
-## 📌 **2. Tuples (`tuple`)**  
+## ❌ **5. Fjern elementer**  
 
-En **tuple** minder om en liste, men den er **ikke-ændringsbar (immutable)**.
-
-```python
-point = (10, 20, 30)
-
-print(point[0])   # 10
-print(point[-1])  # 30
-```
-
-### **2.1 Hvorfor bruge tuples?**
-- **Sikrer, at data ikke kan ændres** (godt til konstanter).
-- **Hurtigere** end lister.
+### **5.1 Fjern efter navn med `.remove()`**  
 
 ```python
-# Fejl – dette er ikke tilladt!
-# point[0] = 15  # TypeError
+frugter.remove("pære")
+print(frugter)  # ['æble', 'fersken', 'chili', 'dadel', 'kiwi', 'mango']
 ```
 
-> Brug tuples, når du vil beskytte data mod ændringer!
+### **5.2 Fjern efter indeks med `.pop()`**  
+
+```python
+sidste = frugter.pop()  # Fjerner sidste element
+print(sidste)  # mango
+print(frugter)
+```
+
+### **5.3 Slet et element med `del`**  
+
+```python
+del frugter[1]  # Fjerner 'fersken'
+print(frugter)
+```
+
+### **5.4 Fjern alt med `.clear()`**  
+
+```python
+frugter.clear()
+print(frugter)  # []
+```
 
 ---
 
-## 📌 **3. Dictionaries (`dict`)**  
+## 🔄 **6. Iterere gennem en liste**  
 
-En **dictionary (dict)** gemmer **nøgle-værdi-par**. Dette gør det nemt at organisere relaterede data.
+### **6.1 `for`-loop**  
 
 ```python
-person = {
-    "navn": "Lise",
-    "alder": 25,
-    "by": "Aarhus"
-}
-
-print(person["navn"])  # Lise
-print(person["alder"]) # 25
+for frugt in frugter:
+    print("Jeg kan lide", frugt)
 ```
 
-### **3.1 Tilføj eller ændr værdier**
+### **6.2 `while`-loop**  
+
 ```python
-person["job"] = "Ingeniør"  # Tilføjer en ny nøgle-værdi
-person["alder"] = 26        # Ændrer værdien af 'alder'
-print(person)
+i = 0
+while i < len(frugter):
+    print(frugter[i])
+    i += 1
 ```
 
-### **3.2 Løkker gennem en dictionary**
+### **6.3 Listekomprehension (kortere kode)**  
+
 ```python
-for nøgle, værdi in person.items():
-    print(nøgle, ":", værdi)
+store_frugter = [frugt.upper() for frugt in frugter]
+print(store_frugter)
 ```
-
-> Dictionaries er ideelle til at gemme **strukturerede data**, såsom databaser eller API-data.
 
 ---
 
-## 📌 **4. Sets (`set`)**  
+## 🔍 **7. Liste-metoder**  
 
-Et **set** indeholder **unikke** værdier og **ingen bestemt rækkefølge**.
+| Metode           | Beskrivelse |
+|-----------------|------------|
+| `.append(x)`    | Tilføjer `x` til slutningen |
+| `.insert(i, x)` | Indsætter `x` på indeks `i` |
+| `.remove(x)`    | Fjerner første `x` |
+| `.pop(i)`       | Fjerner element på indeks `i` |
+| `.clear()`      | Tømmer hele listen |
+| `.index(x)`     | Finder indeks for `x` |
+| `.count(x)`     | Tæller antal af `x` |
+| `.sort()`       | Sorterer listen |
+| `.reverse()`    | Vender rækkefølgen om |
+
+Eksempel:
 
 ```python
-unikke_tal = {1, 2, 3, 2, 4, 4}
-print(unikke_tal)  # {1, 2, 3, 4}  (dubletter fjernes)
+tal = [3, 1, 4, 1, 5, 9]
+tal.sort()
+print(tal)  # [1, 1, 3, 4, 5, 9]
 ```
-
-### **4.1 Tilføj og fjern elementer**
-```python
-unikke_tal.add(5)  # Tilføjer et nyt tal
-unikke_tal.remove(2)  # Fjerner tallet 2
-print(unikke_tal)
-```
-
-### **4.2 Set-operationer**
-```python
-mængde1 = {1, 2, 3}
-mængde2 = {3, 4, 5}
-
-print(mængde1.union(mængde2))    # {1, 2, 3, 4, 5}
-print(mængde1.intersection(mængde2))  # {3}
-```
-
-> Sets bruges, når du har **unikke data**, såsom tags, labels eller medlemslister.
 
 ---
 
-## 🎯 **5. Øvelser**  
+## 🎯 **8. Øvelser**  
 
-### 1️⃣ **Lister**
-- Opret en liste med tre ting, du godt kan lide.
-- Tilføj en ny ting til listen.
+### 1️⃣ **Grundlæggende lister**
+- Lav en liste med tre af dine yndlingsfilm.
+- Tilføj en ny film til listen.
 - Udskriv listen.
 
-### 2️⃣ **Tuples**
-- Opret en tuple med tre tal.
-- Prøv at ændre et element (hvad sker der?).
+### 2️⃣ **Ændring af lister**
+- Lav en liste med tre farver.
+- Skift den anden farve til en ny.
+- Udskriv listen.
 
-### 3️⃣ **Dictionaries**
-- Opret en dictionary med information om dig selv (`"navn"`, `"alder"`, `"by"`).
-- Tilføj en ny nøgle, `"hobby"`, med en værdi.
+### 3️⃣ **Fjernelse af elementer**
+- Lav en liste med fem tal.
+- Fjern det største tal.
+- Udskriv listen.
 
-### 4️⃣ **Sets**
-- Lav et set med tal fra 1 til 5.
-- Lav et andet set med tal fra 3 til 7.
-- Find fælles værdier mellem de to sets.
+### 4️⃣ **Brug af loops**
+- Lav en liste over dine favoritmadvarer.
+- Brug en `for`-loop til at udskrive hver madvare.
 
 ### 🔥 **Bonusudfordring**
-- Lav en **telefonbog** med et dictionary, hvor navnene er nøgler, og telefonnumrene er værdier.
+- Lav et **indkøbsliste-program**, hvor brugeren kan:
+  - Tilføje varer (`.append()`)
+  - Fjerne varer (`.remove()`)
+  - Se hele listen
 
 ---
 
-## 🚀 **6. Opsummering**
-✔️ **Lister** er **ændringsbare**, bevarer rækkefølge.  
-✔️ **Tuples** er **ikke-ændringsbare**, hurtigere end lister.  
-✔️ **Dictionaries** er **nøgle-værdi-par**, ideelle til struktureret data.  
-✔️ **Sets** indeholder **unikke** elementer og bruges til mængdeoperationer.  
+## 🚀 **9. Opsummering**
+✔️ Lister er **ændringsbare**, kan indeholde **blandede datatyper**  
+✔️ Brug `.append()`, `.insert()`, `.remove()` og `.pop()` til at ændre lister  
+✔️ Brug `for`-loops til at gennemgå lister  
+✔️ Listekomprehension giver **kort og effektiv kode**  
 
-**📌 Videre til næste modul: [Dictionaries](3.2-Dictionaries.md)**  
-Her lærer du, hvordan du **læser og skriver filer i Python**! 📁  
+**📌 Videre til næste modul: [Tuples](3.3-Tuples)**  
+Her lærer du om **tuples – lister, der ikke kan ændres**! 📦  
 
-**God fornøjelse med datahåndtering i Python!** 📂🐍  
+**God fornøjelse med lister i Python!** 📋🐍  
