--- a/Modul_3/3.2.Dictionaries.md
+++ b/Modul_3/3.2.Dictionaries.md
@@ -1,1 +1,150 @@
+# 📖 **Modul: Dictionaries i Python**  
 
+Dictionaries (`dict`) er en **nøgle-værdi-baseret** datastruktur i Python, som gør det let at lagre og organisere data.
+
+> **Mål for dette modul:**  
+> ✅ Forstå hvordan dictionaries fungerer i Python  
+> ✅ Lære at tilføje, ændre og fjerne elementer  
+> ✅ Iterere gennem dictionaries  
+> ✅ Bruge dictionaries i praktiske eksempler  
+
+---
+
+## 📌 **1. Hvad er en dictionary?**  
+
+En **dictionary** gemmer data som **nøgle-værdi-par**, hvor hver nøgle er unik.
+
+```python
+# Oprettelse af en dictionary
+person = {
+    "navn": "Lise",
+    "alder": 25,
+    "by": "Aarhus"
+}
+
+print(person["navn"])  # Udskriver: Lise
+```
+
+> **OBS:** Nøglerne skal være **unikke** og kan ikke gentages.
+
+---
+
+## 🔢 **2. Tilføje og ændre værdier**  
+
+### **2.1 Tilføj en ny nøgle-værdi**  
+
+```python
+person["job"] = "Ingeniør"
+print(person)
+```
+
+### **2.2 Ændre en eksisterende værdi**  
+
+```python
+person["alder"] = 26  # Ændrer værdien af 'alder'
+print(person)
+```
+
+---
+
+## ❌ **3. Fjerne elementer**  
+
+### **3.1 Brug af `del`**  
+
+```python
+del person["by"]
+print(person)  # 'by' er fjernet
+```
+
+### **3.2 Brug af `.pop()`**  
+
+```python
+alder = person.pop("alder")  # Fjerner og returnerer alder
+print(alder)  # Udskriver: 26
+print(person)  # 'alder' er fjernet
+```
+
+### **3.3 Fjern alle elementer med `.clear()`**  
+
+```python
+person.clear()
+print(person)  # {}
+```
+
+---
+
+## 🔄 **4. Iterere gennem en dictionary**  
+
+### **4.1 Iterere over nøgler**  
+
+```python
+for nøgle in person:
+    print(nøgle)
+```
+
+### **4.2 Iterere over værdier**  
+
+```python
+for værdi in person.values():
+    print(værdi)
+```
+
+### **4.3 Iterere over både nøgler og værdier**  
+
+```python
+for nøgle, værdi in person.items():
+    print(nøgle, ":", værdi)
+```
+
+---
+
+## 🏗 **5. Ordbogsmetoder (`dict`-metoder)**  
+
+| Metode          | Beskrivelse |
+|----------------|------------|
+| `.get(nøgle)`  | Returnerer værdien af en nøgle eller `None`, hvis den ikke findes |
+| `.keys()`      | Returnerer alle nøgler |
+| `.values()`    | Returnerer alle værdier |
+| `.items()`     | Returnerer alle nøgle-værdi-par |
+| `.pop(nøgle)`  | Fjerner en nøgle og returnerer dens værdi |
+| `.update(dict)` | Opdaterer en dictionary med en anden dictionary |
+
+### **Eksempel på `.get()`**  
+
+```python
+print(person.get("navn"))  # Lise
+print(person.get("adresse", "Ikke angivet"))  # Standardværdi
+```
+
+---
+
+## 🎯 **6. Øvelser**  
+
+### 1️⃣ **Grundlæggende dictionaries**
+- Lav en dictionary med information om en bil (`"mærke"`, `"model"`, `"årgang"`).
+- Udskriv bilens mærke.
+
+### 2️⃣ **Tilføj og fjern data**
+- Tilføj `"farve"` til din bil-dictionary.
+- Fjern `"årgang"` fra dictionary’en.
+
+### 3️⃣ **Iteration**
+- Lav en dictionary over tre personer med deres alder.
+- Brug en `for`-loop til at udskrive deres navne og alder.
+
+### 🔥 **Bonusudfordring**
+- Lav et **telefonbogsprogram**, hvor brugeren kan:
+  - Tilføje kontakter (`navn -> nummer`).
+  - Søge efter et telefonnummer.
+
+---
+
+## 🚀 **7. Opsummering**
+✔️ **Dictionaries** bruges til at gemme data som **nøgle-værdi-par**.  
+✔️ Brug `.keys()`, `.values()` og `.items()` til at arbejde med indholdet.  
+✔️ `del`, `.pop()` og `.clear()` fjerner elementer fra en dictionary.  
+
+**📌 Videre til næste modul: [Sets](#)**  
+Her lærer du om **sets – datastrukturer med unikke værdier**! 🔢  
+
+**God fornøjelse med dictionaries i Python!** 📖🐍  
