--- a/Modul_3/3.5-Filhåndtering.md
+++ b/Modul_3/3.5-Filhåndtering.md
@@ -1,1 +1,151 @@
+# 📂 **Modul 3.5: Filhåndtering i Python**  
 
+Filhåndtering i Python gør det muligt at **læse, skrive og manipulere filer**. Dette er vigtigt, når du skal gemme data eller hente eksisterende information.
+
+> **Mål for dette modul:**  
+> ✅ Lære at åbne og lukke filer korrekt  
+> ✅ Læse fra og skrive til `.txt` og `.csv` filer  
+> ✅ Forstå `with open()` for sikker filhåndtering  
+> ✅ Introduktion til JSON-formatet  
+
+---
+
+## 📌 **1. Åbne og lukke en fil i Python**  
+
+For at åbne en fil bruger vi funktionen `open()`:
+
+```python
+fil = open("data.txt", "r")  # Åbner filen i læsetilstand (read mode)
+indhold = fil.read()  # Læser hele filen
+fil.close()  # Lukker filen
+print(indhold)
+```
+
+> **OBS:** Det er vigtigt at lukke filer med `.close()`, så data ikke går tabt.
+
+### **1.1 Brug `with open()` (Bedste praksis)**  
+
+For at undgå problemer, bruger vi **`with open()`**, som automatisk lukker filen:
+
+```python
+with open("data.txt", "r") as fil:
+    indhold = fil.read()
+    print(indhold)
+```
+
+---
+
+## ✏ **2. Skrive til en fil (`write` mode)**  
+
+Hvis vi vil skrive til en fil, bruger vi `"w"` (write mode). **Dette overskriver filen!**
+
+```python
+with open("data.txt", "w") as fil:
+    fil.write("Dette er en ny fil!
+")
+```
+
+For at **tilføje** tekst i stedet for at overskrive, bruger vi `"a"` (append mode):
+
+```python
+with open("data.txt", "a") as fil:
+    fil.write("Tilføjer en ny linje.
+")
+```
+
+> **OBS:** `"w"` sletter alt tidligere indhold, mens `"a"` tilføjer nyt.
+
+---
+
+## 📖 **3. Læse filer linje for linje**  
+
+Hvis en fil har flere linjer, kan vi læse dem én ad gangen:
+
+```python
+with open("data.txt", "r") as fil:
+    for linje in fil:
+        print(linje.strip())  # Fjerner tomme mellemrum og linjeskift
+```
+
+---
+
+## 📊 **4. Arbejde med CSV-filer**  
+
+CSV-filer (`Comma Separated Values`) bruges ofte til tabulære data.
+
+```python
+import csv
+
+# Skrive til en CSV-fil
+with open("data.csv", "w", newline="") as fil:
+    writer = csv.writer(fil)
+    writer.writerow(["Navn", "Alder", "By"])
+    writer.writerow(["Lise", 25, "Aarhus"])
+    writer.writerow(["Søren", 30, "København"])
+```
+
+**Læse fra en CSV-fil:**  
+
+```python
+with open("data.csv", "r") as fil:
+    reader = csv.reader(fil)
+    for række in reader:
+        print(række)
+```
+
+---
+
+## 🔄 **5. Arbejde med JSON-filer**  
+
+JSON (`JavaScript Object Notation`) er et populært format til at gemme og udveksle data.
+
+```python
+import json
+
+data = {
+    "navn": "Lise",
+    "alder": 25,
+    "by": "Aarhus"
+}
+
+# Skrive JSON til en fil
+with open("data.json", "w") as fil:
+    json.dump(data, fil, indent=4)
+
+# Læse JSON fra en fil
+with open("data.json", "r") as fil:
+    indhold = json.load(fil)
+    print(indhold)  # {'navn': 'Lise', 'alder': 25, 'by': 'Aarhus'}
+```
+
+---
+
+## 🎯 **6. Øvelser**  
+
+### 1️⃣ **Grundlæggende filhåndtering**
+- Opret en fil `min_fil.txt` og skriv `"Hej Python"` i den.
+- Åbn filen og udskriv indholdet.
+
+### 2️⃣ **CSV-filer**
+- Lav en CSV-fil med en liste over dine yndlingsfilm.
+- Læs filen og udskriv indholdet.
+
+### 3️⃣ **JSON-filer**
+- Lav en JSON-fil med information om dig selv.
+- Læs JSON-filen og udskriv værdierne.
+
+### 🔥 **Bonusudfordring**
+- Lav et **simpelt log-system**, hvor hver kørsel af programmet tilføjer en ny linje til en log-fil.
+
+---
+
+## 🚀 **7. Opsummering**
+✔️ Brug `with open()` for sikker filhåndtering  
+✔️ `"r"` til læsning, `"w"` til skrivning, `"a"` til tilføjelse  
+✔️ CSV-filer bruges til tabulære data  
+✔️ JSON-filer bruges til at gemme struktureret data  
+
+**📌 Videre til næste modul: [Pandas](/Modul_5)**  
+Her lærer du, hvordan du **arbejder med store datasæt i Pandas**! 🐼  
+
+**God fornøjelse med filhåndtering i Python!** 📂🐍  
