--- a/Modul_4/4.2-Pandas_Datastrukturer.md
+++ b/Modul_4/4.2-Pandas_Datastrukturer.md
@@ -1,1 +1,141 @@
+# 📊 **4.2 Pandas Datastrukturer**  
 
+Pandas har to primære datastrukturer:  
+
+1. **`Series`** → En **én-dimensional** datastruktur (som en liste).  
+2. **`DataFrame`** → En **to-dimensional** tabel (som en Excel-tabel).  
+
+Disse datastrukturer er **optimerede til hurtig datahåndtering** og bruges bredt inden for databehandling og analyse.
+
+---
+
+## 📌 **1. Pandas `Series` (Én-dimensionel data)**  
+
+En **`Series`** er en **én-dimensional** datastruktur, der ligner en liste eller en kolonne i et Excel-ark.  
+
+```python
+import pandas as pd
+
+# Opret en Series
+data = pd.Series([10, 20, 30, 40])
+print(data)
+```
+
+📌 **Output:**  
+```
+0    10
+1    20
+2    30
+3    40
+dtype: int64
+```
+
+### **1.1 Adgang til elementer i en `Series`**  
+
+Ligesom lister bruger en `Series` **nulbaseret indeks**:  
+
+```python
+print(data[0])  # 10
+print(data[2])  # 30
+```
+
+Du kan også **sætte brugerdefinerede indeks**:  
+
+```python
+data = pd.Series([100, 200, 300], index=["a", "b", "c"])
+print(data)
+```
+
+📌 **Output:**  
+```
+a    100
+b    200
+c    300
+dtype: int64
+```
+
+> **Brug en `Series`, når du har én kolonne med data.**  
+
+---
+
+## 📌 **2. Pandas `DataFrame` (To-dimensionel tabel)**  
+
+En **`DataFrame`** er en **to-dimensional tabel** med rækker og kolonner (som en Excel-tabel).  
+
+```python
+data = {
+    "Navn": ["Lise", "Anders", "Mia"],
+    "Alder": [25, 30, 28],
+    "By": ["Aarhus", "København", "Odense"]
+}
+
+df = pd.DataFrame(data)
+print(df)
+```
+
+📌 **Output:**  
+```
+     Navn  Alder         By
+0    Lise     25    Aarhus
+1  Anders     30  København
+2     Mia     28    Odense
+```
+
+> **Brug en `DataFrame`, når du har flere kolonner med data.**  
+
+### **2.1 Adgang til kolonner**  
+
+```python
+print(df["Navn"])  # Viser kun "Navn"-kolonnen
+```
+
+### **2.2 Adgang til rækker med `.loc[]` og `.iloc[]`**  
+
+```python
+print(df.loc[1])   # Adgang med indeksnavn
+print(df.iloc[0])  # Adgang med numerisk indeks
+```
+
+---
+
+## 📂 **3. Konvertering mellem datastrukturer**  
+
+Du kan **konvertere mellem `Series` og `DataFrame`**:  
+
+```python
+# Konverter en DataFrame-kolonne til en Series
+serie = df["Alder"]
+print(type(serie))  # <class 'pandas.core.series.Series'>
+
+# Konverter en Series til en DataFrame
+df_ny = serie.to_frame()
+print(type(df_ny))  # <class 'pandas.core.frame.DataFrame'>
+```
+
+---
+
+## 🎯 **4. Øvelser**  
+
+### 1️⃣ **Grundlæggende Pandas `Series`**
+- Opret en `Series` med fem temperaturværdier.
+- Indstil brugerdefinerede indeks med ugedage.
+- Udskriv temperaturen for en specifik dag.
+
+### 2️⃣ **Grundlæggende Pandas `DataFrame`**
+- Opret en `DataFrame` med tre personer, inklusive navn, alder og by.
+- Udskriv kun `Navn`-kolonnen.
+- Hent data for den anden person ved hjælp af `.loc[]`.
+
+### 🔥 **Bonusudfordring**
+- Lav en `Series` med tilfældige tal og konverter den til en `DataFrame`.
+
+---
+
+## 🚀 **5. Opsummering**
+✔ **`Series` er én-dimensional, `DataFrame` er to-dimensional**  
+✔ **Brug `.loc[]` og `.iloc[]` til at tilgå rækker**  
+✔ **Konverter nemt mellem datastrukturer**  
+
+**📌 Videre til næste modul: [4.3 - Indlæsning af Data](4.3-Indlæsning_af_data.md)**  
+
+God fornøjelse med Pandas! 🐼🚀  
